--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
       border-radius:10px;
       color:#fff;
     }
+    p{
+      color: #db9d0e;
+      text-shadow: 2px 2px 4px rgba(21, 141, 215, 0.5); /* Añadir sombra al texto para mayor contraste */
+    }
+    li{
+      color: #675d5d;
+      text-shadow: 2px 2px 4px rgba(21, 141, 215, 0.5); /* Añadir sombra al texto para mayor contraste */
+    }
     a.btn{
       font-weight:600;
       border-radius:10px;
@@ -87,3 +95,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
